-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Fixed
-
Affects Version/s: 5.12.1
-
Fix Version/s: 5.12.2
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:
-
Platform/s:
-
Commits:1e3ed172f35abaa0e0af43ee22259bc3cd188ad8
Class QQmlApplicationEngine connects Qt.quit() signal to QCoreApplication::quit() and
QQmlApplicationEngine::exit() signal to QCoreApplication::exit(), but it does so with AutoConnection. This causes in some circumstances problems, which are described in Qt documentation.
Qt documentation on QCoreApplication::exit(),
"It's good practice to always connect signals to this slot using a QueuedConnection. If a signal connected (non-queued) to this slot is emitted before control enters the main event loop (such as before "int main" calls exec()), the slot has no effect and the application never exits. Using a queued connection ensures that the slot will not be invoked until after control enters the main event loop."
- is duplicated by
-
QTBUG-73851 Qt.quit() does not work with qmlscene
-
- Closed
-